[package]
name = "greqlint_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_json = "*"
greqlint_schema = { path = "../greqlint_schema" }
greqlint_core = { path = "../greqlint_core" }
clap = { version = "4.5.1", features = ["derive"] }
ansi-colors = "0.3.0"